--- a/styles/_buttons.scss
+++ b/styles/_buttons.scss
@@ -1,8 +1,18 @@
 @import './variables';
 .addBttn {
+    align-items: center;
     background-color:$add-button;
     border: none;
     border-radius: 2px;
     color: #f5f5f5;
+    display: flex;
+    justify-content: center;
+    font-family: 'Varela Round', sans-serif; 
     height: 33px;
+    padding-left: 12px;
+    padding-right: 12px;
+    text-align: center;
+    i {
+        padding-right: 4px;
+    }
 }
