--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,63 @@
 .addBttn {
+  align-items: center;
   background-color: #5cb85c;
   border: none;
   border-radius: 2px;
   color: #f5f5f5;
+  display: flex;
+  justify-content: center;
+  font-family: "Varela Round", sans-serif;
   height: 33px;
+  padding-left: 12px;
+  padding-right: 12px;
+  text-align: center;
+}
+.addBttn i {
+  padding-right: 4px;
+}
+
+.employees-list {
+  box-sizing: border-box;
+  font-size: 13px;
+  color: #566787;
+  text-align: left;
+}
+.employees-list thead tr {
+  border-bottom: 2px solid #ccc;
+  width: 100%;
+}
+.employees-list th {
+  box-sizing: border-box;
+  padding: 0px;
+  text-align: left;
+}
+.employees-list th:first-child {
+  padding: 15px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  width: 30px;
+}
+.employees-list th:first-child span {
+  padding: 0;
+  width: 60px;
+}
+.employees-list th:first-child span input {
+  padding: 0;
+}
+.employees-list th:nth-child(2) {
+  width: 185px;
+}
+.employees-list th:nth-child(3) {
+  width: 360px;
+}
+.employees-list th:nth-child(4) {
+  width: 178px;
+}
+.employees-list th:nth-child(5) {
+  width: 199px;
+}
+.employees-list th:nth-child(6) {
+  width: 100px;
 }
 
 body {
@@ -13,24 +67,43 @@ body {
   font-family: "Varela Round", sans-serif;
 }
 
-.header {
+.all {
+  background-color: #fff;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin: 20px;
+  overflow: hidden;
+  width: 1140px;
+}
+.all .header {
   align-items: center;
   background-color: #435d7d;
   color: #f5f5f5;
   display: flex;
   justify-content: space-between;
-  padding: 15px;
+  padding: 20px;
+  padding-left: 25px;
+  padding-right: 25px;
 }
-.header h1 {
+.all .header h1 {
+  font-weight: lighter;
   margin: 0;
 }
-
-.main {
-  background-color: #fff;
-  border-radius: 7px;
-  box-sizing: border-box;
-  overflow: hidden;
-  width: 1140px;
+.all .mainSection {
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+}
+.all .mainSection .searchBar {
+  align-self: flex-end;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-family: "Varela Round", sans-serif;
+  height: 25px;
+  margin-bottom: 15px;
+  padding: 4px;
+  justify-self: right;
+  width: 350px;
 }
 
 /*# sourceMappingURL=styles.css.map */
