--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -6,3 +6,6 @@ $add-button: #5cb85c;
 $save-button: #5bc0de;
 $save-button-hover: #31b0d5;
 $cancel-button-hover: #e3e3e3;
+$card-footer:     rgb(236, 240, 241);
+
+$card-borders: #e5e5e5;
