--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,55 +22,126 @@
   color: #566787;
   text-align: left;
 }
-.employees-list thead tr {
-  border-bottom: 2px solid #ccc;
-  width: 100%;
-}
-.employees-list th {
+.employees-list tr th {
   box-sizing: border-box;
   padding: 0px;
   text-align: left;
 }
-.employees-list th:first-child {
+.employees-list tr th:first-child {
   padding: 15px;
   padding-top: 12px;
   padding-bottom: 12px;
   width: 30px;
 }
-.employees-list th:first-child span {
+.employees-list tr th:first-child span {
   padding: 0;
   width: 60px;
 }
-.employees-list th:first-child span input {
+.employees-list tr th:first-child span input {
   padding: 0;
 }
-.employees-list th:nth-child(2) {
+.employees-list tr th:nth-child(2) {
   width: 185px;
 }
-.employees-list th:nth-child(3) {
+.employees-list tr th:nth-child(3) {
   width: 360px;
 }
-.employees-list th:nth-child(4) {
+.employees-list tr th:nth-child(4) {
   width: 178px;
 }
-.employees-list th:nth-child(5) {
+.employees-list tr th:nth-child(5) {
   width: 199px;
 }
-.employees-list th:nth-child(6) {
+.employees-list tr th:nth-child(6) {
   width: 100px;
+}
+
+.card {
+  background-color: white;
+  border-radius: 5px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  margin: 30px;
+  overflow: hidden;
+  width: 35%;
+}
+.card .card-header {
+  align-items: center;
+  border-bottom: 1px solid #e5e5e5;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+.card .card-header h2 {
+  margin: 0px;
+}
+.card .card-body {
+  padding: 30px;
+}
+.card .card-body div {
+  display: flex;
+  flex-direction: column;
+  margin: 5px;
+}
+.card .card-body div label {
+  width: 100%;
+}
+.card .card-body div input {
+  box-sizing: border-box;
+  width: 100%;
+  height: 30px;
+}
+.card .card-body div .input-address {
+  height: 150px;
+}
+.card .card-footer {
+  background-color: #ecf0f1;
+  border-top: 1px solid #e5e5e5;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: flex-end;
+  padding: 20px;
+  height: 30%;
+  width: 100%;
+}
+.card .card-footer button {
+  height: 35px;
+  margin: 7px;
+  width: 90px;
+}
+
+.modal {
+  align-items: center;
+  background-color: black;
+  box-sizing: border-box;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  opacity: 1;
+  padding: 40px;
+  width: 100%;
+  z-index: 100;
+}
+
+html {
+  height: 100%;
 }
 
 body {
   background-color: #f5f5f5;
   display: flex;
+  height: 100%;
   justify-content: center;
   font-family: "Varela Round", sans-serif;
+  margin: 0;
 }
 
 .all {
   background-color: #fff;
   border-radius: 4px;
   box-sizing: border-box;
+  display: none;
   margin: 20px;
   overflow: hidden;
   width: 1140px;
@@ -106,7 +177,4 @@ body {
   width: 350px;
 }
 
-.action-th {
-  display: flex;
-}
 /*# sourceMappingURL=styles.css.map */
