--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,7 +1,8 @@
 @import './variables';
 @import './buttons';
 @import './employeesList';
-@import './addModal';
+@import './modal';
+@import './modalcard';
 
 html {
     height: 100%;
