--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,6 +56,19 @@
   width: 100px;
 }
 
+.modal {
+  align-items: center;
+  background-color: black;
+  box-sizing: border-box;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  opacity: 1;
+  padding: 40px;
+  width: 100%;
+  z-index: 100;
+}
+
 .card {
   background-color: white;
   border-radius: 5px;
