--- a/styles/_modalcard.scss
+++ b/styles/_modalcard.scss
@@ -53,15 +53,7 @@
 
     }
 }
-.modal {
-    align-items: center;
-    background-color: black;
-    box-sizing: border-box;
-    display: flex;
-    height: 100%;
-    justify-content: center;
-    opacity: 1;
-    padding: 40px;
-    width: 100%;
-    z-index: 100;
+
+#modify-card {
+    display:none // temporal
 }
