--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -1,7 +1,7 @@
 
 .modal {
     align-items: center;
-    background-color: black;
+    background-color: #00000054;
     box-sizing: border-box;
     display: flex;
     height: 100%;
