--- a/styles/_buttons.scss
+++ b/styles/_buttons.scss
@@ -1,13 +1,21 @@
-@import './variables';
-.addBttn {
+
+.button {
     align-items: center;
-    background-color:$add-button;
     border: none;
     border-radius: 2px;
-    color: #f5f5f5;
+    color: #f5f5f5; 
+    cursor: pointer;
     display: flex;
     justify-content: center;
-    font-family: 'Varela Round', sans-serif; 
+    font-family: 'Varela Round', sans-serif;
+    padding-left: 12px;
+    padding-right: 12px;
+    text-align: center;
+}
+
+#addBttn {
+    background-color:$add-button;
+     
     height: 33px;
     padding-left: 12px;
     padding-right: 12px;
@@ -15,4 +23,26 @@
     i {
         padding-right: 4px;
     }
+}
+
+.cancelBttn {
+    
+    color: #333;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    &:hover {
+            
+        background-color: #e6e6e6;
+        border-color: #adadad;
+    }
+
+}
+ 
+.submitBttn {
+    background-color: $add-button;
+    border: 1px solid $add-button-border;
+    &:hover {
+        background-color: $add-button-hover;
+        border: 1px solid $add-button-border-hover;
+    }  
 }
