--- a/styles/_modalcard.scss
+++ b/styles/_modalcard.scss
@@ -2,11 +2,12 @@
     background-color: white;
     border-radius: 5px;
     box-sizing: border-box;
+    box-shadow:0 5px 15px rgba(0,0,0,.5);
     display: flex;
     flex-direction: column;
     margin: 30px;
     overflow: hidden;
-    width: 35%;
+    width: 33%;
     .card-header {
         align-items: center;
         border-bottom: 1px solid $card-borders;
@@ -14,25 +15,31 @@
         justify-content: space-between;
         padding: 20px;
         h2 {
+            font-size: 18px;
+            font-weight: normal;
             margin: 0px;
         }
     }
     .card-body {
-        padding: 30px;
+        padding: 20px;
         div {
             display: flex;
             flex-direction: column;
-            margin: 5px;
+            margin: 10px;
             label {
+                font-size: 13px;
+                margin-bottom: 5px;
                 width:100%;
             }
             input{
+                border-radius: 2px;
+                border: 1px solid #dddddd;
                 box-sizing: border-box;
                 width: 100%;
                 height: 30px;
             } 
             .input-address {
-                height:150px;
+                height:70px;
             }
         }
     }
