--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,10 +2,14 @@ $bodybackground: #f5f5f5;
 $sectionbackground: #ffff;
 $text-color: #566787;
 $header-background: #435d7d;
-$add-button: #5cb85c;
+$add-button: #5cb85c; 
 $save-button: #5bc0de;
+$add-button-border: #4cae4c;
 $save-button-hover: #31b0d5;
 $cancel-button-hover: #e3e3e3;
 $card-footer:     rgb(236, 240, 241);
-
 $card-borders: #e5e5e5;
+
+$add-button-hover:#449d44;
+
+$add-button-border-hover:#398439;
