--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,6 +9,7 @@ html {
 }
 body {
     background-color: #f5f5f5;
+    color: $text-color;
     display: flex;
     height: 100%;
     justify-content: center;
