--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,25 +1,50 @@
-.addBttn {
+.button {
   align-items: center;
-  background-color: #5cb85c;
   border: none;
   border-radius: 2px;
   color: #f5f5f5;
+  cursor: pointer;
   display: flex;
   justify-content: center;
   font-family: "Varela Round", sans-serif;
+  padding-left: 12px;
+  padding-right: 12px;
+  text-align: center;
+}
+
+#addBttn {
+  background-color: #5cb85c;
   height: 33px;
   padding-left: 12px;
   padding-right: 12px;
   text-align: center;
 }
-.addBttn i {
+#addBttn i {
   padding-right: 4px;
+}
+
+.cancelBttn {
+  color: #333;
+  background-color: #fff;
+  border: 1px solid #ccc;
+}
+.cancelBttn:hover {
+  background-color: #e6e6e6;
+  border-color: #adadad;
+}
+
+.submitBttn {
+  background-color: #5cb85c;
+  border: 1px solid #4cae4c;
+}
+.submitBttn:hover {
+  background-color: #449d44;
+  border: 1px solid #398439;
 }
 
 .employees-list {
   box-sizing: border-box;
   font-size: 13px;
-  color: #566787;
   text-align: left;
 }
 .employees-list tr th {
@@ -73,11 +98,12 @@
   background-color: white;
   border-radius: 5px;
   box-sizing: border-box;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: column;
   margin: 30px;
   overflow: hidden;
-  width: 35%;
+  width: 33%;
 }
 .card .card-header {
   align-items: center;
@@ -87,26 +113,32 @@
   padding: 20px;
 }
 .card .card-header h2 {
+  font-size: 18px;
+  font-weight: normal;
   margin: 0px;
 }
 .card .card-body {
-  padding: 30px;
+  padding: 20px;
 }
 .card .card-body div {
   display: flex;
   flex-direction: column;
-  margin: 5px;
+  margin: 10px;
 }
 .card .card-body div label {
+  font-size: 13px;
+  margin-bottom: 5px;
   width: 100%;
 }
 .card .card-body div input {
+  border-radius: 2px;
+  border: 1px solid #dddddd;
   box-sizing: border-box;
   width: 100%;
   height: 30px;
 }
 .card .card-body div .input-address {
-  height: 150px;
+  height: 70px;
 }
 .card .card-footer {
   background-color: #ecf0f1;
@@ -130,6 +162,7 @@ html {
 
 body {
   background-color: #f5f5f5;
+  color: #566787;
   display: flex;
   height: 100%;
   justify-content: center;
