--- a/styles/styles.css
+++ b/styles/styles.css
@@ -117,6 +117,13 @@
   font-weight: normal;
   margin: 0px;
 }
+.card .card-header i {
+  color: #cfccc6;
+  cursor: pointer;
+}
+.card .card-header i:hover {
+  color: #636363;
+}
 .card .card-body {
   padding: 20px;
 }
