--- a/styles/_employeesList.scss
+++ b/styles/_employeesList.scss
@@ -1,5 +1,7 @@
 .employees-list {
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
     font-size: 13px;
     text-align: left;
 
@@ -46,5 +48,36 @@
             }
             
         }
+    }
+    .employees-list-body {
+        .employees-list-item {
+            align-items: center;
+            display: flex;
+            font-weight: normal;
+            th{
+                font-weight: normal;
+                &:nth-child(6) {
+                    align-items: center;
+                    box-sizing: border-box;
+                    display:flex;
+                    width: 100px;
+                    span {
+                        justify-content: center;
+                        box-sizing: border-box;
+                        display: flex;
+                        width: 40%;
+                        margin:0;
+                    }
+                    i{
+                        cursor: pointer;
+                        font-size: 17px;
+                        margin: 0;
+                    }
+        
+                }
+                
+            }
+        }
+       
     }
 }
