--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -3,7 +3,7 @@
     align-items: center;
     background-color: #00000054;
     box-sizing: border-box;
-    display: flex;
+    display: none;
     height: 100%;
     justify-content: center;
     opacity: 1;
