--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -8,6 +8,9 @@
     justify-content: center;
     opacity: 1;
     padding: 40px;
+    position: fixed;
+    top: 0;
+    left: 0 ;
     width: 100%;
     z-index: 100;
 }
