--- a/styles/_modalcard.scss
+++ b/styles/_modalcard.scss
@@ -3,7 +3,7 @@
     border-radius: 5px;
     box-sizing: border-box;
     box-shadow:0 5px 15px rgba(0,0,0,.5);
-    display: flex;
+    display: none;
     flex-direction: column;
     margin: 30px;
     overflow: hidden;
@@ -67,3 +67,4 @@
 
     }
 }
+
