--- a/styles/_employeesList.scss
+++ b/styles/_employeesList.scss
@@ -4,20 +4,34 @@
     flex-direction: column;
     font-size: 13px;
     text-align: left;
+    width:100%;
 
     tr {   
+        
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        font-weight: normal;
         th{
+            display:flex;
             box-sizing: border-box;
             padding: 0px;
             text-align: left;
+            width: 100%;
             &:first-child{
+                display: flex;
+                box-sizing: border-box;
+                justify-content: center;
                 padding: 15px;
                 padding-top: 12px;
                 padding-bottom: 12px; 
-                width: 30px;
+                width: 60px;
                 span {
+                    box-sizing: border-box;
+                    justify-content: center;
+                    display: flex;
+                    align-items: center;
                     padding: 0;
-                    width: 60px;
                     input {
                         padding:0;
                     }
@@ -51,27 +65,25 @@
     }
     .employees-list-body {
         .employees-list-item {
+            justify-content: center;
             align-items: center;
             display: flex;
             font-weight: normal;
             th{
+                
                 font-weight: normal;
                 &:nth-child(6) {
-                    align-items: center;
-                    box-sizing: border-box;
-                    display:flex;
-                    width: 100px;
-                    span {
-                        justify-content: center;
-                        box-sizing: border-box;
-                        display: flex;
-                        width: 40%;
-                        margin:0;
-                    }
-                    i{
+                  
+                    .fa{
                         cursor: pointer;
-                        font-size: 17px;
-                        margin: 0;
+                        font-size: 20px;
+                        margin: 5px;
+                    }
+                    .fa-trash {
+                        color: red;
+                    }
+                    .fa-edit {
+                        color: yellow;
                     }
         
                 }
