--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,21 +48,36 @@
   flex-direction: column;
   font-size: 13px;
   text-align: left;
+  width: 100%;
+}
+.employees-list tr {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  font-weight: normal;
 }
 .employees-list tr th {
+  display: flex;
   box-sizing: border-box;
   padding: 0px;
   text-align: left;
+  width: 100%;
 }
 .employees-list tr th:first-child {
+  display: flex;
+  box-sizing: border-box;
+  justify-content: center;
   padding: 15px;
   padding-top: 12px;
   padding-bottom: 12px;
-  width: 30px;
+  width: 60px;
 }
 .employees-list tr th:first-child span {
+  box-sizing: border-box;
+  justify-content: center;
+  display: flex;
+  align-items: center;
   padding: 0;
-  width: 60px;
 }
 .employees-list tr th:first-child span input {
   padding: 0;
@@ -83,6 +98,7 @@
   width: 100px;
 }
 .employees-list .employees-list-body .employees-list-item {
+  justify-content: center;
   align-items: center;
   display: flex;
   font-weight: normal;
@@ -90,23 +106,16 @@
 .employees-list .employees-list-body .employees-list-item th {
   font-weight: normal;
 }
-.employees-list .employees-list-body .employees-list-item th:nth-child(6) {
-  align-items: center;
-  box-sizing: border-box;
-  display: flex;
-  width: 100px;
-}
-.employees-list .employees-list-body .employees-list-item th:nth-child(6) span {
-  justify-content: center;
-  box-sizing: border-box;
-  display: flex;
-  width: 40%;
-  margin: 0;
-}
-.employees-list .employees-list-body .employees-list-item th:nth-child(6) i {
+.employees-list .employees-list-body .employees-list-item th:nth-child(6) .fa {
   cursor: pointer;
-  font-size: 17px;
-  margin: 0;
+  font-size: 20px;
+  margin: 5px;
+}
+.employees-list .employees-list-body .employees-list-item th:nth-child(6) .fa-trash {
+  color: red;
+}
+.employees-list .employees-list-body .employees-list-item th:nth-child(6) .fa-edit {
+  color: yellow;
 }
 
 .modal {
@@ -118,6 +127,9 @@
   justify-content: center;
   opacity: 1;
   padding: 40px;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   z-index: 100;
 }
@@ -127,7 +139,7 @@
   border-radius: 5px;
   box-sizing: border-box;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-  display: flex;
+  display: none;
   flex-direction: column;
   margin: 30px;
   overflow: hidden;
@@ -242,6 +254,10 @@ body {
   padding: 4px;
   justify-self: right;
   width: 350px;
+}
+
+.display {
+  display: flex;
 }
 
 /*# sourceMappingURL=styles.css.map */
