--- a/styles/_employeesList.scss
+++ b/styles/_employeesList.scss
@@ -10,30 +10,50 @@
         
         justify-content: center;
         align-items: center;
+        border-bottom: 2px solid #ddd; 
         display: flex;
         font-weight: normal;
+        box-sizing: border-box;
         th{
             display:flex;
             box-sizing: border-box;
-            padding: 10px;
+            padding: 15px;
             text-align: left;
             width: 100%;
             &:first-child{
+                align-items: center;
                 display: flex;
                 box-sizing: border-box;
                 justify-content: center;
-                padding: 15px;
+                padding: 15px; 
                 padding-top: 12px;
                 padding-bottom: 12px; 
                 width: 60px;
-                span {
+                .label-checkbox {
+                    border: 1px solid #ddd;
+                    border-radius: 3px;
                     box-sizing: border-box;
-                    justify-content: center;
                     display: flex;
-                    align-items: center;
-                    padding: 0;
-                    input {
-                        padding:0;
+                    height: 22px;
+                    position: absolute;
+                    width: 22px;
+                    
+                    .fa-check-square{
+                        bottom: 4px;
+                        display: none;
+                        font-size:26;
+                        left: -1px;
+                        position: relative;
+                    } 
+                    input { 
+                        display: none;
+                        &:checked  ~  .fa-check-square {
+                                display: block;
+                            
+                        } 
+                        &:checked .label-checkbox {
+                            background-color: $text-color;
+                        }
                     }
                 }
             }
@@ -69,38 +89,8 @@
             align-items: center;
             display: flex;
             font-weight: normal;
-            .th-checkbox {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                .label-checkbox {
-                    border: 2px solid $text-color;
-                    border-radius: 3px;
-                    box-sizing: border-box;
-                    display: flex;
-                    height: 22px;
-                    position: absolute;
-                    width: 22px;
-                    
-                    .fa-check-square{
-                        bottom: 4px;
-                        display: none;
-                        font-size:24px;
-                        left: -1px;
-                        position: relative;
-                    } 
-                    input { 
-                        display: none;
-                        &:checked  ~  .fa-check-square {
-                                display: block;
-                            
-                        } 
-                        &:checked .label-checkbox {
-                            background-color: $text-color;
-                        }
-                    }
-                }
-            }
+            border-width:1px;
+            
             th{                 
                 font-weight: normal;
                
