--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,17 +53,20 @@
 .employees-list tr {
   justify-content: center;
   align-items: center;
+  border-bottom: 2px solid #ddd;
   display: flex;
   font-weight: normal;
+  box-sizing: border-box;
 }
 .employees-list tr th {
   display: flex;
   box-sizing: border-box;
-  padding: 10px;
+  padding: 15px;
   text-align: left;
   width: 100%;
 }
 .employees-list tr th:first-child {
+  align-items: center;
   display: flex;
   box-sizing: border-box;
   justify-content: center;
@@ -72,15 +75,30 @@
   padding-bottom: 12px;
   width: 60px;
 }
-.employees-list tr th:first-child span {
+.employees-list tr th:first-child .label-checkbox {
+  border: 1px solid #ddd;
+  border-radius: 3px;
   box-sizing: border-box;
-  justify-content: center;
   display: flex;
-  align-items: center;
-  padding: 0;
+  height: 22px;
+  position: absolute;
+  width: 22px;
 }
-.employees-list tr th:first-child span input {
-  padding: 0;
+.employees-list tr th:first-child .label-checkbox .fa-check-square {
+  bottom: 4px;
+  display: none;
+  font-size: 26;
+  left: -1px;
+  position: relative;
+}
+.employees-list tr th:first-child .label-checkbox input {
+  display: none;
+}
+.employees-list tr th:first-child .label-checkbox input:checked ~ .fa-check-square {
+  display: block;
+}
+.employees-list tr th:first-child .label-checkbox input:checked .label-checkbox {
+  background-color: #566787;
 }
 .employees-list tr th:nth-child(2) {
   width: 185px;
@@ -102,36 +120,7 @@
   align-items: center;
   display: flex;
   font-weight: normal;
-}
-.employees-list .employees-list-body .employees-list-item .th-checkbox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.employees-list .employees-list-body .employees-list-item .th-checkbox .label-checkbox {
-  border: 2px solid #566787;
-  border-radius: 3px;
-  box-sizing: border-box;
-  display: flex;
-  height: 22px;
-  position: absolute;
-  width: 22px;
-}
-.employees-list .employees-list-body .employees-list-item .th-checkbox .label-checkbox .fa-check-square {
-  bottom: 4px;
-  display: none;
-  font-size: 24px;
-  left: -1px;
-  position: relative;
-}
-.employees-list .employees-list-body .employees-list-item .th-checkbox .label-checkbox input {
-  display: none;
-}
-.employees-list .employees-list-body .employees-list-item .th-checkbox .label-checkbox input:checked ~ .fa-check-square {
-  display: block;
-}
-.employees-list .employees-list-body .employees-list-item .th-checkbox .label-checkbox input:checked .label-checkbox {
-  background-color: #566787;
+  border-width: 1px;
 }
 .employees-list .employees-list-body .employees-list-item th {
   font-weight: normal;
