--- a/styles/_employeesList.scss
+++ b/styles/_employeesList.scss
@@ -41,7 +41,7 @@
                     .fa-check-square{
                         bottom: 4px;
                         display: none;
-                        font-size:26;
+                        font-size:26px;
                         left: -1px;
                         position: relative;
                     } 
