--- a/styles/styles.css
+++ b/styles/styles.css
@@ -87,7 +87,7 @@
 .employees-list tr th:first-child .label-checkbox .fa-check-square {
   bottom: 4px;
   display: none;
-  font-size: 26;
+  font-size: 26px;
   left: -1px;
   position: relative;
 }
