--- a/styles/_employeesList.scss
+++ b/styles/_employeesList.scss
@@ -49,7 +49,6 @@
                         display: none;
                         &:checked  ~  .fa-check-square {
                                 display: block;
-                            
                         } 
                         &:checked .label-checkbox {
                             background-color: $text-color;
@@ -59,26 +58,21 @@
             }
             &:nth-child(2) {
                 width: 185px;
-
             }
             
             &:nth-child(3) {
                 width: 360px;
-
             }
             
             &:nth-child(4) {
                 width: 178px;
-
             }
             
             &:nth-child(5) {
                 width: 199px;
-
             }
             &:nth-child(6) {
                 width: 100px;
-
             }
             
         }
@@ -91,6 +85,9 @@
             font-weight: normal;
             border-width:1px;
             
+            &:nth-child(odd) {
+                background-color: $bodybackground;
+            }
             th{                 
                 font-weight: normal;
                
