--- a/styles/styles.css
+++ b/styles/styles.css
@@ -123,6 +123,9 @@
   border-width: 1px;
 }
 .employees-list .employees-list-body .employees-list-item:nth-child(odd) {
+  background-color: #fcfcfc;
+}
+.employees-list .employees-list-body .employees-list-item:hover {
   background-color: #f5f5f5;
 }
 .employees-list .employees-list-body .employees-list-item th {
