--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,4 +1,5 @@
 $bodybackground: #f5f5f5;
+$item-background: #fcfcfc;
 $sectionbackground: #ffff;
 $text-color: #566787;
 $header-background: #435d7d;
