--- a/styles/_buttons.scss
+++ b/styles/_buttons.scss
@@ -42,3 +42,15 @@
         border: 1px solid $add-button-border-hover;
     }  
 }
+
+.deleteBttn{
+    background: #D9534F;
+    border: 1px solid #D9534F;
+    color: #e6e6e6;
+    cursor: pointer;
+    margin: 0 0 0 10px;
+    padding: 6px 12px;
+    &:hover{
+        background-color:#B8413B;
+    }
+}
