--- a/styles/_modalDlt.scss
+++ b/styles/_modalDlt.scss
@@ -3,6 +3,7 @@
     border-radius: 5px;
     box-sizing: border-box;
     box-shadow:0 5px 15px rgba(0,0,0,.5);
+    display: none;
     flex-direction: column;
     margin: 30px;
     overflow: hidden;
